// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton Component has correct :active background-color for bgType 1`] = `
.c0 {
  background-color: #48cfad;
  border: none;
  color: white;
  padding: 12px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  margin-right: 2px;
}

.c0:hover {
  background-color: #37bc9b;
}

.c0:focus {
  outline: 0;
}

.c0:active {
  background-color: #ccd1d9;
}

<styled.button
  bgType="success"
  theme={
    Object {
      "color": Object {
        "black": "#000",
        "darkGreen": "#37bc9b",
        "darkGrey": "#aab2bd",
        "darkRed": "#da4453",
        "lightGreen": "#48cfad",
        "lightGrey": "#ccd1d9",
        "lightRed": "#ed5565",
        "primary": "#5d9cec",
        "secondary": "#4a89dc",
        "white": "#fff",
      },
      "layout": Object {
        "maxWidth": "62.5rem",
      },
    }
  }
>
  <StyledComponent
    bgType="success"
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  background-color: ",
            [Function],
            ";
  border: none;
  color: white;
  padding: 12px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  cursor: pointer;
  transition: background-color 150ms linear;
  margin-right: 2px;
  
  &:hover {
    background-color: ",
            [Function],
            ";
  }
  
  &:focus {
    outline: 0;
  }
  
  &:active {
    background-color: ",
            [Function],
            ";
  }
",
          ],
        },
        "displayName": "styled.button",
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "button",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    theme={
      Object {
        "color": Object {
          "black": "#000",
          "darkGreen": "#37bc9b",
          "darkGrey": "#aab2bd",
          "darkRed": "#da4453",
          "lightGreen": "#48cfad",
          "lightGrey": "#ccd1d9",
          "lightRed": "#ed5565",
          "primary": "#5d9cec",
          "secondary": "#4a89dc",
          "white": "#fff",
        },
        "layout": Object {
          "maxWidth": "62.5rem",
        },
      }
    }
  >
    <button
      className="c0"
    >
      Button Text
    </button>
  </StyledComponent>
</styled.button>
`;

exports[`StyledButton Component has correct default styles 1`] = `
.c0 {
  background-color: #ccd1d9;
  border: none;
  color: white;
  padding: 12px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  margin-right: 2px;
}

.c0:hover {
  background-color: #aab2bd;
}

.c0:focus {
  outline: 0;
}

.c0:active {
  background-color: #5d9cec;
}

<styled.button
  theme={
    Object {
      "color": Object {
        "black": "#000",
        "darkGreen": "#37bc9b",
        "darkGrey": "#aab2bd",
        "darkRed": "#da4453",
        "lightGreen": "#48cfad",
        "lightGrey": "#ccd1d9",
        "lightRed": "#ed5565",
        "primary": "#5d9cec",
        "secondary": "#4a89dc",
        "white": "#fff",
      },
      "layout": Object {
        "maxWidth": "62.5rem",
      },
    }
  }
>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  background-color: ",
            [Function],
            ";
  border: none;
  color: white;
  padding: 12px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  cursor: pointer;
  transition: background-color 150ms linear;
  margin-right: 2px;
  
  &:hover {
    background-color: ",
            [Function],
            ";
  }
  
  &:focus {
    outline: 0;
  }
  
  &:active {
    background-color: ",
            [Function],
            ";
  }
",
          ],
        },
        "displayName": "styled.button",
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "button",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    theme={
      Object {
        "color": Object {
          "black": "#000",
          "darkGreen": "#37bc9b",
          "darkGrey": "#aab2bd",
          "darkRed": "#da4453",
          "lightGreen": "#48cfad",
          "lightGrey": "#ccd1d9",
          "lightRed": "#ed5565",
          "primary": "#5d9cec",
          "secondary": "#4a89dc",
          "white": "#fff",
        },
        "layout": Object {
          "maxWidth": "62.5rem",
        },
      }
    }
  >
    <button
      className="c0"
    >
      Button Text
    </button>
  </StyledComponent>
</styled.button>
`;
